--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -37,27 +37,28 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"你想要買點Units，還是使用你的Units？",
- 	 	 	 	 	"Thanks for checking the store out.",
- 	 	 	 	 	"Did you know that the S.A.T. was in a developmental phase for a long time?",
- 	 	 	 	 	"We just got a new stock of S.A.T.'s. Interested in getting one?",
- 	 	 	 	 	"Welcome to the Arasaka Unit Exchange.",
- 	 	 	 	 	"Did you know the current S.A.T.'s are actually version 2.0?",
- 	 	 	 	 	"Remember: Rare S.A.T.'s and Normal grade S.A.T.'s arent compatible.",
- 	 	 	 	 	"BTC? No, we only deal in UNITs here.",
- 	 	 	 	 	"Do you know Rossi from the bank? We went to school together.",
- 	 	 	 	 	"Have you visited Doc at Trinoky Mart? You don't look too well.",
- 	 	 	 	 	"Most folks around here are nice. I stress most.",
- 	 	 	 	 	"Been anywhere interesting lately? I just got back from Neo-Japan.",
- 	 	 	 	 	"There's nothing like a hot cup of tea on a cold day, won't you agree?",
- 	 	 	 	 	"We got more S.A.T.'s on the way. Want to take a look in the mean time?",
- 	 	 	 	 	"Global S.A.T.'s signals tend to go up at random. Be sure to pay attention.",
- 	 	 	 	 	"My radio jammed up pretty bad the other day. Turns out it was the 3Helix Network.",
- 	 	 	 	 	"You want to really make everyone's day? Buy some units and use 'em for EXP boosts!",
- 	 	 	 	 	"Buying units and spending them benefits everyone, you know?",
- 	 	 	 	 	"A game that isn't pay to win. Fancy that!",
- 	 	 	 	 	"Everyone gets something out of your purchase, even the dev!",
- 	 	 	 	 	"Noise complaint?"
+ 	 	 	 	 	"你想要買點 Unit，還是使用你的 Unit？",
+ 	 	 	 	 	"歡迎光臨。",
+ 	 	 	 	 	"你知道 S.A.T. 在很長一段時間內處於發展階段嗎？",
+ 	 	 	 	 	"我們剛剛得到一批新的 S.A.T. 的庫存。有興趣來買一個嗎？",
+ 	 	 	 	 	"歡迎來到荒坂貨幣換匯。",
+ 	 	 	 	 	"你知道目前的 S.A.T. 的實際上是 2.0 版本嗎？",
+ 	 	 	 	 	"記住。稀有的 S.A.T. 和普通等級的 S.A.T. 不相容。",
+ 	 	 	 	 	"BTC？不，我們這裡只交易 UNIT。",
+ 	 	 	 	 	"你認識銀行的 Rossi 嗎？我們以前一起上學。",
+ 	 	 	 	 	"你看起來不是很好。去看過醫生了嗎？",
+ 	 	 	 	 	"這裡的大多數人都很好。我是說大多數...",
+ 	 	 	 	 	"最近去了什麼有趣的地方嗎？我剛剛從新日本回來。",
+ 	 	 	 	 	"在寒冷的日子裡，沒有什麼比一杯熱茶更重要的了，你同意嗎？",
+ 	 	 	 	 	"我們有更多的 S.A.T. 即將到貨。過段時間記得回來看一看。",
+ 	 	 	 	 	"全球 S.A.T. 的訊號往往是隨機上升的。一定要注意。",
+ 	 	 	 	 	"我的收音機前幾天卡得很厲害。結果發現是 3Helix 網路。",
+ 	 	 	 	 	"你想讓每個人都過上真正的日子嗎？買一些 Unit，然後用它們來提高經驗值！",
+ 	 	 	 	 	"你知道嗎？購買單位並花費它們，對每個人都有好處。",
+ 	 	 	 	 	"一個不需要付錢就能贏的遊戲。看中的就是這個！",
+ 	 	 	 	 	"每個人都能從你的購買中得到一些東西，甚至是開發者！",
+ 	 	 	 	 	"噪音投訴？"
+					
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Do you want to buy Units, or use your Units?"
@@ -79,25 +80,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"哈囉！提供一點贊助，你就能獲得裝飾品，同時也能支持像這款遊戲一樣堅定拒絕付費取勝（P2W）的遊戲！",
- 	 	 	 	 	"Have you considered making a monthly donation?",
- 	 	 	 	 	"Nice to see you, what is it you require?",
- 	 	 	 	 	"Want to stand out from the crowd? Maybe grab a subscription.",
- 	 	 	 	 	"I can apply a profile photo to your profile if you buy a subscription. What do you say?",
- 	 	 	 	 	"Want a colorful border for online chatting? Why don't you subscribe?",
- 	 	 	 	 	"The cost of the lowest subscription is only a cup of coffee. Think you could spare me some caffeine?",
- 	 	 	 	 	"Donating makes you pretty and helps the development of the game.",
- 	 	 	 	 	"Want to make a scene? Make yourself shine brighter than the sun with a new look!",
- 	 	 	 	 	"I can't offer you any pay-to-win content, but I can defnitely make you look dazzling!",
- 	 	 	 	 	"Colorful is the new cool! I can give you a color... for a price.",
- 	 	 	 	 	"You like pictures, I like pictures, we all like pictures. For a price, anyone can have one!",
- 	 	 	 	 	"Donations keep the game development going. I buy coffee with it so I can keep on making content!",
- 	 	 	 	 	"Coding is exhausting. A good coffee is only 2 dollars!",
- 	 	 	 	 	"With a donation, you can help support the game and look cool doing it! Color, pictures, and animations!",
- 	 	 	 	 	"Money makes the world go 'round! You donating means I can make this a full time job!",
- 	 	 	 	 	"Fancy a cool profile, do ye?",
- 	 	 	 	 	"You look like a person who knows their style! Tell you what, I'll give you style for a price.",
- 	 	 	 	 	"Beauty tip #1: Color is half of what makes the world so amazing!"
+ 	 	 	 	 	"哈囉！提供一點贊助，你就能獲得裝飾品，同時也能支持像這款遊戲一樣堅定拒絕付費取勝（P2W）的遊戲！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -170,46 +153,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"相信我，你在這兒只會找到上等貨。",
- 	 	 	 	 	"I can help you if you give me some BitCoin.",
- 	 	 	 	 	"I can repair your equipment... for a price.",
- 	 	 	 	 	"What do you want, stranger?",
- 	 	 	 	 	"Check out what I have scavenged today.",
- 	 	 	 	 	"Won't find anything better around these parts.",
- 	 	 	 	 	"Have a look at what I've got today.",
- 	 	 	 	 	"Fresh wares plundered from the wasteland.",
- 	 	 	 	 	"What can I get you today?",
- 	 	 	 	 	"Buy something already. I haven't got all day.",
- 	 	 	 	 	"You break it, you buy it. Global policy.",
- 	 	 	 	 	"Interested in anything we got today?",
- 	 	 	 	 	"Welcome to my shop. Have a look around.",
- 	 	 	 	 	"Can I help you find something, stranger?",
- 	 	 	 	 	"Quality weapons only at this Smithy.",
- 	 	 	 	 	"Care to buy one to protect yourself?",
- 	 	 	 	 	"The finest weapon smith in Shangri-La at your service.",
- 	 	 	 	 	"It's dangerous to go alone.... nevermind.",
- 	 	 	 	 	"I was an adventurer like you. Until I established this shop.",
- 	 	 	 	 	"No returns or exchanges. What you pay is what you get.",
- 	 	 	 	 	"Haven't had enough of me yet, have ya?",
- 	 	 	 	 	"The finest weapons and armor.",
- 	 	 	 	 	"Hmm... guns, helmets, etc. Pretty much anything to suit your needs.",
- 	 	 	 	 	"Looking to protect yourself or deal some damage?",
- 	 	 	 	 	"Oh? A bit of this and a bit of that.",
- 	 	 	 	 	"Trinkets, odds-and-ends. You know... That sort of thing.",
- 	 	 	 	 	"Some may call this junk. Me? I call it treasure.",
- 	 	 	 	 	"Have you ever met the Worldslayer?",
- 	 	 	 	 	"Tell the President I said hi!",
- 	 	 	 	 	"I wonder what Lucille's up to...",
- 	 	 	 	 	"Don't just window-shop. Buy something!",
- 	 	 	 	 	"Anything in particular that you're looking for?",
- 	 	 	 	 	"You look like you know a bargain when you see one!",
- 	 	 	 	 	"I used to be an adventurer like you, but then I took a bullet to the knee",
- 	 	 	 	 	"LEDs, ropes, explosives. You want it? It's yours, my friend. As long as you have enough Bitcoin.",
- 	 	 	 	 	"I always collect the finest blasters I can.",
- 	 	 	 	 	"Nice weapon you've got there. Compensating for something?",
- 	 	 	 	 	"I once saw someone kill three men in a bar... with a pencil.",
- 	 	 	 	 	"Welcome, Baba Yaga.",
- 	 	 	 	 	"The Boogeyman?!"
+ 	 	 	 	 	"相信我，你在這兒只會找到上等貨。"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -236,13 +180,13 @@
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
  	 	 	 	 	"我會協助你前往下一個區域！",
- 	 	 	 	 	"I can tap on the knowledge of the whole world... and yet I'm treated as a cookbook.",
- 	 	 	 	 	"My daughter's name is not Mithra! Stop making fun of her!",
- 	 	 	 	 	"Are you prepared?",
- 	 	 	 	 	"The key is nothing without the container.",
- 	 	 	 	 	"Which weighs more, traveller? Your guns, or your past?",
- 	 	 	 	 	"The key above all things... except a good drink.",
- 	 	 	 	 	"One key, one purpose."
+ 	 	 	 	 	"我可以挖掘整個世界的知識......但我卻被當做一本食譜。",
+ 	 	 	 	 	"我女兒的名字不是 Mithra！不要再取笑她了！",
+ 	 	 	 	 	"你準備好了嗎？",
+ 	 	 	 	 	"沒有容器的話，鑰匙什麼都不是。",
+ 	 	 	 	 	"哪個更沉重？旅行者？你的槍，還是你的過去？",
+ 	 	 	 	 	"鑰匙高於一切......除了一杯好酒。",
+ 	 	 	 	 	"一把鑰匙，一個目的。"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll help you to progress to the next area!"
@@ -256,39 +200,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"嘿，小子 ... 過來瞧瞧我手頭的貨。",
- 	 	 	 	 	"Hurting? You've come to the right place.",
- 	 	 	 	 	"We've got the cheap stuff and the good stuff, kid.",
- 	 	 	 	 	"Have you heard about the street angel?",
- 	 	 	 	 	"Welcome to Trinoky Mart. You can call me Doc.",
- 	 	 	 	 	"We are open 24/7. Unless we aren't.",
- 	 	 	 	 	"Don't cause any trouble and don't bring any trouble.",
- 	 	 	 	 	"Try to steal anything and I will have a new mannequin.",
- 	 	 	 	 	"The least you could do is stop bleeding before you come in.",
- 	 	 	 	 	"No refunds and no exchanges. I don't run a charity here.",
- 	 	 	 	 	"Hey kid. How are you today?",
- 	 	 	 	 	"Don't stop at Grade 7, or else you'll be slaving away here forever like me.",
- 	 	 	 	 	"The finest medical supply mart in all of Shangri-La.",
- 	 	 	 	 	"SLPD causing a racket again. I hope the council puts them in their place.",
- 	 	 	 	 	"Hey kid, ever heard of The 3Helix Network?",
- 	 	 	 	 	"Hey kid, ever run into anyone called the Worldslayer?",
- 	 	 	 	 	"Did you hear about the restaurant on the moon? Great food but no atmosphere!",
- 	 	 	 	 	"A cheese factory exploded in France. There was da brie everywhere!",
- 	 	 	 	 	"Geology rocks but Geography is where it’s at!",
- 	 	 	 	 	"I hate how funerals are always at 9 a.m. I’m not really a mourning person.",
- 	 	 	 	 	"Why did Adele cross the road? To say hello from the other side.",
- 	 	 	 	 	"I don’t trust stairs. They’re always up to something.",
- 	 	 	 	 	"What did the sushi say to the bee? Wasabee!",
- 	 	 	 	 	"The past, the present, and the future walk into a bar. It was tense!",
- 	 	 	 	 	"Why should you never trust a train? They have loco motives.",
- 	 	 	 	 	"I was wondering why the ball was getting bigger. Then it hit me.",
- 	 	 	 	 	"I used to work in a shoe-recycling shop. It was sole destroying!",
- 	 	 	 	 	"Come to Quark's! Quark's is fun! Come right now – and don't walk – run!",
- 	 	 	 	 	"I've got the best gear you'll find anywhere!",
- 	 	 	 	 	"I used to collect colored Legendary Special Weapon, but now everything's just white",
- 	 	 	 	 	"The changing rooms are over there…",
- 	 	 	 	 	"Let's close the deal before I wet myself!",
- 	 	 	 	 	"Please take a look! We surely have something that tickles your fancy..."
+ 	 	 	 	 	"嘿，小子 ... 過來瞧瞧我手頭的貨。"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
@@ -306,28 +218,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"歡迎。你需要存放什麼東西嗎？",
- 	 	 	 	 	"Hello. This is the safest place for your most precious items.",
- 	 	 	 	 	"Lucky you! Here your items are in the safest place.",
- 	 	 	 	 	"Welcome. Do you have something to deposit?",
- 	 	 	 	 	"Welcome to the Shangri-La branch. How can I help you today?",
- 	 	 	 	 	"I lift things up and put them down. Kidding, but also, not really.",
- 	 	 	 	 	"Bank of Arasaka for all your banking needs.",
- 	 	 	 	 	"Welcome. What service are you using today?",
- 	 	 	 	 	"24/7 for all your banking needs.",
- 	 	 	 	 	"This is the most secure place in the city.",
- 	 	 	 	 	"Hello there. My name is Rossi. What can I do for you?",
- 	 	 	 	 	"Tellers to the left. Deposit stations to the right.",
- 	 	 	 	 	"Thanks for visting today. Need any favors?",
- 	 	 	 	 	"Not you again... What do you want?",
- 	 	 	 	 	"I trust you're not planning any trouble. What can I do for you, friend?",
- 	 	 	 	 	"Look over there. You'll see that Misaki offers the best interest loans, if that interests you.",
- 	 	 	 	 	"Ever run into an adventuring nomad named Finel?",
- 	 	 	 	 	"Our bank is the most secure in the world. Nevermind the only one...",
- 	 	 	 	 	"Would you also like to open a savings account?",
- 	 	 	 	 	"You need to deposit one White Legendary Special Weapon to open a savings account.",
- 	 	 	 	 	"Alpha was just here asking about any epics in your locker!",
- 	 	 	 	 	"There's a problem with your ID. Please pay 1 BTC."
+ 	 	 	 	 	"歡迎。你需要存放什麼東西嗎？"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
@@ -3719,7 +3610,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "烏克蘭，俄羅斯和整個世界的人們都在受苦，只因為一個人的野心。\r\n用愛聊天漏洞，不要戰爭。",
+ 	 	 	 	"trans": "烏克蘭，俄羅斯和整個世界的人們都在受苦，只因為一個人的野心。\r\n用愛聊天，不要戰爭。",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -3743,17 +3634,17 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "你已經阻止了${playerName}",
+ 	 	 	 	 	"trans": "你已經封鎖了 ${playerName}",
  	 	 	 	 	"eng": "You have blocked ${playerName}"
  	 	 	 	},
  	 	 	 	"unblock": {
- 	 	 	 	 	"trans": "解鎖",
+ 	 	 	 	 	"trans": "解封",
  	 	 	 	 	"eng": "Unblock"
  	 	 	 	}
  	 	 	},
  	 	 	"list": {
  	 	 	 	"empty": {
- 	 	 	 	 	"trans": "你沒有被封鎖的玩家。",
+ 	 	 	 	 	"trans": "沒有被你封鎖的玩家。",
  	 	 	 	 	"eng": "You have no blocked players."
  	 	 	 	}
  	 	 	},
@@ -3762,7 +3653,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "封鎖${playerName}",
+ 	 	 	 	 	"trans": "解除封鎖 ${playerName}",
  	 	 	 	 	"eng": "Unblock ${playerName}"
  	 	 	 	}
  	 	 	}
