--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -80,7 +80,26 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"哈囉！提供一點贊助，你就能獲得裝飾品，同時也能支持像這款遊戲一樣堅定拒絕付費取勝（P2W）的遊戲！"
+ 	 	 	 	 	"哈囉！提供一點贊助，你就能獲得裝飾品，同時也能支持像這款遊戲一樣堅定拒絕付費取勝（P2W）的遊戲！",
+ 	 	 	 	 	"你考慮過每月捐款嗎？",
+ 	 	 	 	 	"很高興見到你，你有什麼要求？",
+ 	 	 	 	 	"想從人群中脫穎而出嗎？也許抓緊時間訂閱吧。",
+ 	 	 	 	 	"如果你購買訂閱，我可以在你的資料中顯示一張資料照片。你覺得如何？",
+ 	 	 	 	 	"想在網路上聊天時有個彩色的邊框嗎？你要不要試試訂閱呢？",
+ 	 	 	 	 	"最低的訂閱費用只是一杯咖啡。能給我一些咖啡因嗎？",
+ 	 	 	 	 	"捐款讓你變得漂亮，有助於遊戲的發展。",
+ 	 	 	 	 	"想打扮一下嗎？用新的外觀讓自己比太陽更閃亮！",
+ 	 	 	 	 	"我不能為你提供任何付費的內容，但我絕對可以讓你看起來很耀眼！",
+ 	 	 	 	 	"多彩絢麗是多麼的酷！我可以給你一個顏色瞧瞧......只要付費。",
+ 	 	 	 	 	"你喜歡圖片，我喜歡圖片，我們都喜歡圖片。只要有錢，任何人都可以擁有！",
+ 	 	 	 	 	"捐款讓遊戲開發繼續進行。我用它來買咖啡，所以我可以繼續製作內容！",
+ 	 	 	 	 	"寫程式很累人的。一杯好咖啡只需2美元！",
+ 	 	 	 	 	"透過捐款，你可以幫助支持遊戲，而且看起來很酷！顏色、圖片和動畫！",
+ 	 	 	 	 	"錢能使世界運轉！你的捐贈意味著我可以讓這個遊戲變得更好。你的捐贈意味著我可以把這當成一份全職工作！",
+ 	 	 	 	 	"你想要一個很酷的簡介，是嗎？",
+ 	 	 	 	 	"你看起來像一個知道自己風格的人！告訴你吧，我可以給你一份禮物。但這是有代價的。",
+ 	 	 	 	 	"美麗提示1：顏色是使世界如此神奇的一半原因！"
+					
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -98,7 +117,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"我會列印出任何你想要的玩意兒 ── 只要你有那玩意兒的快取記憶體！",
+ 	 	 	 	 	"我會列印出任何你想要的東西 ── 只要你有那個東西的快取記憶體！",
  	 	 	 	 	"給我快取記憶體，我就給你成品！",
  	 	 	 	 	"請告訴我，你帶了一些史詩級的快取記憶體。",
  	 	 	 	 	"Please, tell me you have some Epic cache with you.",
@@ -153,7 +172,45 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"相信我，你在這兒只會找到上等貨。"
+ 	 	 	 	 	"相信我，你在這裡只會找到上等貨。",
+ 	 	 	 	 	"如果你給我一些比特幣，我可以幫助你。",
+ 	 	 	 	 	"我可以修理你的設備......但要付出代價。",
+ 	 	 	 	 	"你想要什麼，陌生人？",
+ 	 	 	 	 	"看看我今天搜刮到了什麼。",
+ 	 	 	 	 	"在這些地方找不到更好的東西了。",
+ 	 	 	 	 	"看看我今天得到了什麼。",
+ 	 	 	 	 	"從荒地上掠奪來的新鮮物品。",
+ 	 	 	 	 	"今天我能給你什麼？",
+ 	 	 	 	 	"買點東西吧。我沒有整天的時間能陪你浪費。",
+ 	 	 	 	 	"你打碎它，你就買它。全球保固。",
+ 	 	 	 	 	"對我們今天的東西感興趣嗎？",
+ 	 	 	 	 	"歡迎來到我的商店。請四處看看。",
+ 	 	 	 	 	"陌生人，我可以幫你找點東西嗎？",
+					"本鐵匠鋪只提供優質武器。",
+ 	 	 	 	 	"想買一把來保護自己嗎？",
+ 	 	 	 	 	"香格里拉最好的武器鐵匠鋪為你服務。",
+ 	 	 	 	 	"一個人走很危險....，算了吧。",
+ 	 	 	 	 	"我曾經和你一樣是個冒險家。直到我建立了這家店。",
+ 	 	 	 	 	"商品一經售出，恕不退換。",
+ 	 	 	 	 	"還沒有受夠我，是嗎？",
+ 	 	 	 	 	"這裡有最好的武器和盔甲。",
+ 	 	 	 	 	"嗯......槍，頭盔，等等。幾乎所有的東西都能滿足你的需要。",
+ 	 	 	 	 	"想保護自己或造成一些傷害？",
+ 	 	 	 	 	"哦，這個和那個都有一點。",
+ 	 	 	 	 	"小飾品，零星的東西。你知道... 諸如此類的東西。",
+ 	 	 	 	 	"有些人可能把這叫做垃圾。而我，我稱之為寶藏。",
+ 	 	 	 	 	"你見過弒世者(Worldslayer)嗎？",
+ 	 	 	 	 	"代我向總統問好！",
+ 	 	 	 	 	"我想知道 Lucille 在做什麼......",
+ 	 	 	 	 	"別光顧著逛街。買點東西！",
+ 	 	 	 	 	"你在尋找什麼特別的東西？",
+ 	 	 	 	 	"你看起來就像看到便宜貨一樣！",
+ 	 	 	 	 	"我曾經是一個像你一樣的冒險家，直到我的膝蓋中了一顆子彈",
+ 	 	 	 	 	"LED，繩索，炸藥。你想要嗎？都是你的，我的朋友。只要你有足夠的比特幣。",
+ 	 	 	 	 	"我總是收集最好的爆破器。",
+ 	 	 	 	 	"你的武器不錯。想賣給我嗎？",
+ 	 	 	 	 	"我曾經看到有人在酒吧裡殺了三個人......用一支鉛筆。",
+ 	 	 	 	 	"恐怖惡靈？！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -200,7 +257,34 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"嘿，小子 ... 過來瞧瞧我手頭的貨。"
+ 	 	 	 	 	"嘿，小子 ... 過來瞧瞧我手頭的貨。",
+ 	 	 	 	 	"受傷了？那你來對地方了。",
+ 	 	 	 	 	"我們有又便宜又好的東西，孩子。",
+ 	 	 	 	 	"你聽說過街頭天使嗎？",
+ 	 	 	 	 	"歡迎來到 Trinoky Mart。你可以叫我醫生。",
+ 	 	 	 	 	"我們全天候營業。除非我們不在。",
+ 	 	 	 	 	"不要引起任何麻煩，也不要帶來任何麻煩。",
+ 	 	 	 	 	"想偷東西的話，我就會多一個新的人體模型。",
+ 	 	 	 	 	"麻煩你至少來之前先止血吧。",
+ 	 	 	 	 	"不退款，不換貨。我這裡不經營慈善機構。",
+ 	 	 	 	 	"嘿，孩子。你今天好嗎？",
+ 	 	 	 	 	"不要停在7級，否則你會像我一樣永遠在這裡做苦工。",
+ 	 	 	 	 	"整個香格里拉最好的醫療用品市場。",
+ 	 	 	 	 	"SLPD 又在製造喧鬧。我希望議會能讓他們歸位。",
+ 	 	 	 	 	"嘿，孩子，聽說過 3Helix 網路嗎？",					
+ 	 	 	 	 	"嘿，孩子，有沒有碰到過一個叫弒世者(Worldslayer)的人？",
+ 	 	 	 	 	"你聽說過月球上的餐廳嗎？食物很棒，但沒有氣氛！",
+ 	 	 	 	 	"法國的一家乳酪工廠爆炸了。到處都是布裡乳酪！",
+ 	 	 	 	 	"地質學很重要，但地理學卻是最重要的！",
+ 	 	 	 	 	"我討厭葬禮總是在上午9點舉行，我不是一個真正的哀悼者。",
+ 	 	 	 	 	"我不相信樓梯。他們總是在打什麼主意。",
+ 	 	 	 	 	"壽司(sushi)對蜜蜂(bee)說什麼？Wasabee(Wasabi 山葵)！",
+ 	 	 	 	 	"我在想為什麼球會越來越大。然後它就打到了我。",
+ 	 	 	 	 	"我有你能找到的最好的裝備！",
+ 	 	 	 	 	"我曾經收集過彩色的傳奇特殊武器，但現在一切都只有白色的",
+ 	 	 	 	 	"更衣室在那邊...",
+ 	 	 	 	 	"讓我們在我尿褲子之前完成交易吧！",
+ 	 	 	 	 	"請看一看！我們肯定有讓你心癢難耐的東西。我們肯定有讓你心動的東西..."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
@@ -218,7 +302,28 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"歡迎。你需要存放什麼東西嗎？"
+ 	 	 	 	 	"歡迎。你需要存放什麼東西嗎？",
+ 	 	 	 	 	"你好。這是存放你最珍貴物品的最安全的地方。",
+ 	 	 	 	 	"你很幸運！在這裡你的物品是最安全的地方。",
+ 	 	 	 	 	"歡迎。你有東西要存嗎？",
+ 	 	 	 	 	"歡迎來到香格里拉分行。今天有什麼可以幫助您的嗎？",
+ 	 	 	 	 	"我把東西舉起來又放下去。開玩笑，但也不是真的。",
+ 	 	 	 	 	"荒坂銀行滿足您所有的銀行需求。",
+ 	 	 	 	 	"歡迎。你今天需要什麼服務？",
+ 	 	 	 	 	"全年無休，滿足您的所有銀行需求。",
+ 	 	 	 	 	"這裡是本市最安全的地方。",
+ 	 	 	 	 	"您好。我的名字是 Rossi。我能為你做什麼？",
+ 	 	 	 	 	"出納員在左邊。存款站在右邊。",
+ 	 	 	 	 	"感謝您今天的來訪。需要任何幫助嗎？",
+ 	 	 	 	 	"又是你... 你想要什麼？",
+ 	 	 	 	 	"我相信你不打算找任何麻煩。我能為你做什麼，朋友？",
+ 	 	 	 	 	"看那邊。如果你感興趣的話，Misaki 可以提供最好的利息貸款。",
+ 	 	 	 	 	"有沒有碰到過一個叫 Finel 的冒險遊民？",
+ 	 	 	 	 	"我們的銀行是世界上最安全的。更何況是唯一的一家......",
+ 	 	 	 	 	"你也想開一個儲蓄帳戶嗎？",
+ 	 	 	 	 	"你需要存入一件白色傳奇特殊武器才能開立儲蓄帳戶。",
+ 	 	 	 	 	"Alpha 剛才在這裡問你櫃子裡有沒有史詩！",
+ 	 	 	 	 	"你的身份證有問題。請支付1個BTC。"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
@@ -898,7 +1003,7 @@
  	 	 	 	"eng": "AI Core"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "商用神經運算單元(NPU)，自带通用型人工智能。 \r\n        可用於部署人工智能機器人清理地下城",
+ 	 	 	 	"trans": "商用神經運算單元(NPU)，自带通用型人工智慧。 \r\n        可用於部署人工智慧機器人清理地下城",
  	 	 	 	"eng": "Commercially used Neural Processing Unit (NPU). Comes with general purpose AI. \r\n        You can use this to deploy a farming bot to dungeon for you."
  	 	 	}
  	 	},
@@ -1126,13 +1231,13 @@
  	 	 	 	"eng": "Employee Office Case"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一個標準的公事包，有一個標籤上面印著白色的「Arasaka」\r\n         雖然它有一些用於存儲文件的高科技隔間和插槽，但它並不是很適合存放武器\r\n         裝備時增加背包空間",
+ 	 	 	 	"trans": "一個標準的公事包，有一個標籤上面印著白色的「Arasaka」\r\n         雖然它有一些用於儲存文件的高科技隔間和插槽，但它並不是很適合存放武器\r\n         裝備時增加背包空間",
  	 	 	 	"eng": "An standard issue office case, it has a label with whit print with \"Arasaka\" on it, \r\n        while it is specious and has some high tech compartment and slots for document storage, it is not not very suitable for carrying weapons\r\n        increase inventory space when equipped"
  	 	 	}
  	 	},
  	 	"backpack5": {
  	 	 	"name": {
- 	 	 	 	"trans": "自主存儲單位",
+ 	 	 	 	"trans": "自主儲存單位",
  	 	 	 	"eng": "Autonomous Storage Unit"
  	 	 	},
  	 	 	"description": {
@@ -1226,7 +1331,7 @@
  	 	 	 	"eng": "Factory reset shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "存儲預設設定和算法的碎片，可用於將裝備恢復出廠設定",
+ 	 	 	 	"trans": "儲存預設設定和算法的碎片，可用於將裝備恢復出廠設定",
  	 	 	 	"eng": "A shard stores default settings and algorithm for equipments, this is used for factory-resetting your equipments"
  	 	 	}
  	 	},
@@ -1366,11 +1471,11 @@
  	 	 	 	"eng": "Deploy farm bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[掛機]\r\n          放置人工智能機器人代替你清理地下城。這將會消耗一個人工智能核心，通常一個核心僅能進行一趟清理。",
+ 	 	 	 	"trans": "[掛機]\r\n          放置人工智慧機器人代替你清理地下城。這將會消耗一個人工智慧核心，通常一個核心僅能進行一趟清理。",
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "你可以在掛機時使用人工智能核心自動清理敵人",
+ 	 	 	 	"trans": "你可以在掛機時使用人工智慧核心自動清理敵人",
  	 	 	 	"eng": "You can use your AI Core to Auto-Farm enemies while you AFK"
  	 	 	}
  	 	},
@@ -2383,7 +2488,7 @@
  	 	 	 	"eng": "Leaderboard"
  	 	 	},
  	 	 	"skipQueue": {
- 	 	 	 	"trans": "跳過隊列",
+ 	 	 	 	"trans": "跳過佇列",
  	 	 	 	"eng": "Skip Queue"
  	 	 	},
  	 	 	"settings": {
@@ -2659,7 +2764,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "增加你可以存儲在保險庫中的最大物品到${upgradeToSlot}",
+ 	 	 	 	"trans": "增加你可以儲存在保險庫中的最大物品到${upgradeToSlot}",
  	 	 	 	"eng": "Increase the max amount of items you can store in vault to ${upgradeToSlot}"
  	 	 	}
  	 	},
@@ -2870,7 +2975,7 @@
  	 	 	 	"eng": "Referral Program"
  	 	 	},
  	 	 	"skipQueue": {
- 	 	 	 	"trans": "跳過隊列",
+ 	 	 	 	"trans": "跳過佇列",
  	 	 	 	"eng": "Skip Queue"
  	 	 	},
  	 	 	"block-list": {
@@ -3079,7 +3184,7 @@
  	 	 	 	"eng": "the best text-based mmorpg"
  	 	 	},
  	 	 	"confirm": {
- 	 	 	 	"trans": "創建角色",
+ 	 	 	 	"trans": "建立角色",
  	 	 	 	"eng": "Create Character"
  	 	 	},
  	 	 	"confirmModal": {
@@ -3367,21 +3472,21 @@
  	 	"communityItemLore": {
  	 	 	"noLoreButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "創建百科全書",
+ 	 	 	 	 	"trans": "建立百科全書",
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "此物品沒有社區百科全書，成為第一個為它創建百科全書的人。",
+ 	 	 	 	 	"trans": "此物品沒有社群百科全書，成為第一個為它建立百科全書的人。",
  	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
  	 	 	 	}
  	 	 	},
  	 	 	"openButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "社區百科全書",
+ 	 	 	 	 	"trans": "社群百科全書",
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "開啟此物品的社區百科全書",
+ 	 	 	 	 	"trans": "開啟此物品的社群百科全書",
  	 	 	 	 	"eng": "Open the community lore for this item"
  	 	 	 	}
  	 	 	},
@@ -3391,7 +3496,7 @@
  	 	 	 	 	"eng": "edit this lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "編輯這個社區百科全書",
+ 	 	 	 	 	"trans": "編輯這個社群百科全書",
  	 	 	 	 	"eng": "Edit this community lore"
  	 	 	 	}
  	 	 	}
@@ -3908,7 +4013,7 @@
  	 	 	 	"eng": "Escape"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "在地下城內逃離敵人的概率",
+ 	 	 	 	"trans": "在地下城內逃離敵人的機率",
  	 	 	 	"eng": "Chances of you escaping from a dungeon enemy"
  	 	 	}
  	 	},
@@ -3918,7 +4023,7 @@
  	 	 	 	"eng": "Stun chance"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "造成傷害時擊暈敵人的概率， \r\n    導致其該回合無法還擊",
+ 	 	 	 	"trans": "造成傷害時擊暈敵人的機率， \r\n    導致其該回合無法還擊",
  	 	 	 	"eng": "Chance of you stunning your enemy when dealing damage, \r\n    causing them not able to respond to your attack"
  	 	 	}
  	 	},
@@ -4206,7 +4311,7 @@
  	 	},
  	 	"backpack5": {
  	 	 	"name": {
- 	 	 	 	"trans": "自主存儲單位",
+ 	 	 	 	"trans": "自主儲存單位",
  	 	 	 	"eng": "Autonomous Storage Unit"
  	 	 	}
  	 	},
@@ -4313,7 +4418,7 @@
  	 	 	 	 	"eng": "Wow, thanks so much! I'm honored, please make it official by leaving them on our store page :)"
  	 	 	 	},
  	 	 	 	"title2": {
- 	 	 	 	 	"trans": "您的好評將會是非常大的幫助，並為我們的社區帶來更多玩家！",
+ 	 	 	 	 	"trans": "您的好評將會是非常大的幫助，並為我們的社群帶來更多玩家！",
  	 	 	 	 	"eng": "Your good review is going to help me much and bring more players into our community!"
  	 	 	 	}
  	 	 	},
@@ -4579,7 +4684,7 @@
  	 	 	"vars": [
  	 	 	 	"tierName"
  	 	 	],
- 	 	 	"trans": "示例聊天框 ${tierName} 等級",
+ 	 	 	"trans": "範例聊天框 ${tierName} 等級",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
  	 	}
  	},
@@ -4664,7 +4769,7 @@
  	 	 	"eng": "Synaptic Acceleration (Rare)"
  	 	},
  	 	"expBonus": {
- 	 	 	"trans": "額葉皮質增强",
+ 	 	 	"trans": "額葉皮質增強",
  	 	 	"eng": "Frontal Cortex Enhancement"
  	 	},
  	 	"btcBonus": {
@@ -4783,7 +4888,7 @@
  	 	 	 	"eng": "Player contributed content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "你可以透過在 GitHub 頁面中編輯設定文件來幫忙創建或修改物品的百科全書。",
+ 	 	 	 	"trans": "你可以透過在 GitHub 頁面中編輯設定文件來幫忙建立或修改物品的百科全書。",
  	 	 	 	"eng": "You can contribute to the lore of items too by editing the config file in our GitHub page."
  	 	 	},
  	 	 	"confirm": {
@@ -5022,7 +5127,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "綠色聊天外框（自帶動畫）",
+ 	 	 	 	 	"trans": "綠色聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Green Chat Frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
@@ -5042,11 +5147,11 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "金色聊天外框（自帶動畫）",
+ 	 	 	 	 	"trans": "金色聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Gold chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "金色個人檔案外框（自帶動畫）",
+ 	 	 	 	 	"trans": "金色個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Gold Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -5054,7 +5159,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "配置個人檔案的條形碼裝飾",
+ 	 	 	 	 	"trans": "配置個人檔案的條碼裝飾",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
@@ -5082,11 +5187,11 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "紫色聊天外框（自帶動畫）",
+ 	 	 	 	 	"trans": "紫色聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Purple chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "紫色個人檔案外框（自帶動畫）",
+ 	 	 	 	 	"trans": "紫色個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Purple Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -5094,7 +5199,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "配置個人檔案的條形碼裝飾",
+ 	 	 	 	 	"trans": "配置個人檔案的條碼裝飾",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
@@ -5130,11 +5235,11 @@
  	 	 	 	 	"eng": "Become a Cybernetic Potato"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "馬鈴薯聊天外框（自帶動畫）",
+ 	 	 	 	 	"trans": "馬鈴薯聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Potato chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "馬鈴薯個人檔案外框（自帶動畫）",
+ 	 	 	 	 	"trans": "馬鈴薯個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Potato Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"7": {
@@ -5142,7 +5247,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "配置個人檔案的條形碼裝飾",
+ 	 	 	 	 	"trans": "配置個人檔案的條碼裝飾",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"9": {
@@ -5174,11 +5279,11 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "藍色霓虹聊天外框（自帶動畫）",
+ 	 	 	 	 	"trans": "藍色霓虹聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Blue Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "藍色霓虹個人檔案外框（自帶動畫）",
+ 	 	 	 	 	"trans": "藍色霓虹個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Blue Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -5186,7 +5291,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "配置個人檔案的條形碼裝飾",
+ 	 	 	 	 	"trans": "配置個人檔案的條碼裝飾",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
