--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -523,7 +523,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "Un plan contenant des informations utilisées pour l'impression 3D moléculaire d'un(e) ${typeName}, \r\n                    Vous pouvez créer un(e) ${typeName} avec le [Molecular 3d Printer] au [Central Hub].\r\n                    \r\n                    Astuce : Le niveau de l'objet obtenu par impression est déterminé par votre niveau d'impression,\r\n                    donc imprimez toujours ceux de qualité défaillante, vu qu'ils coûtent moins et sont utiles pour améiorer votre niveau d'impression",
+ 	 	 	 	"trans": "Un plan contenant des informations utilisées pour l'impression 3D moléculaire d'un(e) ${typeName}, \r\n                    Tu peux créer un(e) ${typeName} avec l'Imprimante 3D moléculaire dans le Centre-Ville.\r\n                    \r\n                    Astuce : Le niveau de l'objet obtenu par impression est déterminé par ton niveau d'impression,\r\n                    donc imprime toujours les plans de moindre qualité pour améliorer ton niveau d'impression vu leur piêtre valeur",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -2075,7 +2075,7 @@
  	 	 	 	"eng": "Receive Gang Notification"
  	 	 	},
  	 	 	"receiveGlobalNotification": {
- 	 	 	 	"trans": "Recevoir les notifications de buff globale",
+ 	 	 	 	"trans": "Recevoir les notifications de buff global",
  	 	 	 	"eng": "Receive Global Buff Notification"
  	 	 	},
  	 	 	"disableAttackBar": {
@@ -3009,7 +3009,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "'Global Skip' te permet de passer le temps d'attente AFK, et de le terminer instantanément. \n     Cet effet sera appliqué à tous les joueurs effectuant une tâche AFK",
+ 	 	 	 	 	"trans": "'Le Global Skip' permet de passer le temps d'attente AFK, et de le terminer instantanément. \n     Cet effet sera appliqué à tous les joueurs effectuant une tâche AFK",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -3039,7 +3039,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"skippingPlayerCount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Accélération de ${skippingPlayerCount} utilisateurs ..",
+ 	 	 	 	 	"trans": "Accélération de ${skippingPlayerCount} joueurs ...",
  	 	 	 	 	"eng": "Accelerating ${skippingPlayerCount} users.."
  	 	 	 	}
  	 	 	},
@@ -3157,7 +3157,7 @@
  	 	 	 	 	"eng": "Dungeons"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Dans les donjons, tu ne guériras pas après chaque combat, et les ennemis sont plus forts, mais il y a plus d'exp et de récompenses",
+ 	 	 	 	 	"trans": "Dans les donjons, tu ne guériras pas après chaque combat, et les ennemis sont plus forts, mais il y a plus d'EXP et de récompenses",
  	 	 	 	 	"eng": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots"
  	 	 	 	}
  	 	 	},
@@ -3197,7 +3197,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"equipmentName"
  	 	 	 	],
- 	 	 	 	"trans": "${equipmentName} est cassé, répare-le chez l'armurier dans la ville",
+ 	 	 	 	"trans": "${equipmentName} est cassé, répare-le chez l'armurier de la ville",
  	 	 	 	"eng": "${equipmentName} is broken, repair it at the Weapon Smith in the City"
  	 	 	}
  	 	},
