Update_ko_convert.json
yes

--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -519,11 +519,11 @@
  	 	},
  	 	"autoFarm": {
  	 	 	"name": {
- 	 	 	 	"trans": "파밍 봇 배치",
+ 	 	 	 	"trans": "자동사냥 봇 배치",
  	 	 	 	"eng": "Deploy farm bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[AI 경험치 파밍]\r\n        던전에 AI를 투입합니다. 이는 AI 코어를 1개 소모할 것이고, 보통 AI 코어 1개는 한 번의 자동 사냥을 해낼 수 있습니다.",
+ 	 	 	 	"trans": "[AI 경험치 자동파밍]\r\n        던전에 AI를 배치합니다. AI 코어를 1개 소모하여 한 번의 자동 사냥을 수행합니다.",
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
