--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -1879,7 +1879,7 @@
  	 	 	 	"eng": "Custom profile image is a donator exclusive feature"
  	 	 	},
  	 	 	"changePictureDescription": {
- 	 	 	 	"trans": "Để cung cấp trải nghiệm tốt nhất không có lương cho bạn, nhưng điều cần thiết là tất cả các tính năng được trả tiền là mỹ phẩm như hình ảnh hồ sơ & khung trò chuyện, \n                                                 hoặc các buff toàn cầu có lợi cho tất cả mọi người trong trò chơi :) \n                                                 Hy vọng bạn thích trải nghiệm không phải trả tiền!",
+ 	 	 	 	"trans": "Để cung cấp trải nghiệm tốt nhất không có lương cho bạn, nhưng điều cần thiết là tất cả các tính năng được trả tiền là trang trí như hình ảnh hồ sơ & khung trò chuyện, \n                                                 hoặc các buff toàn cầu có lợi cho tất cả mọi người trong trò chơi :) \n                                                 Hy vọng bạn thích trải nghiệm không phải trả tiền!",
  	 	 	 	"eng": "To provide the best No Pay-to-Win experience to you, it is necessary that all paid features are cosmetic like profile images & chat frames, \n                                                or global buffs that benefits everyone in game :)\n                                                Hope you enjoy the No Pay-to-Win experience!"
  	 	 	},
  	 	 	"confirm": {
@@ -1941,7 +1941,7 @@
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
- 	 	 	 	"trans": "Mua, tựa vào, bám vào",
+ 	 	 	 	"trans": "Mua hàng",
  	 	 	 	"eng": "Purchase"
  	 	 	},
  	 	 	"remove": {
@@ -2080,11 +2080,11 @@
  	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Tắt thanh thời gian tấn công",
+ 	 	 	 	 	"trans": "Tắt thanh đo sát thương tấn công",
  	 	 	 	 	"eng": "Disable Attack Timing Bar"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Tắt thanh thời gian sẽ không cộng thêm sát thương khi tấn công",
+ 	 	 	 	 	"trans": "Tắt thanh đo sát thương sẽ không cộng thêm sát thương khi tấn công",
  	 	 	 	 	"eng": "Disabling attack timing bar will not grant extra damage"
  	 	 	 	}
  	 	 	},
@@ -2101,7 +2101,7 @@
  	 	 	 	"eng": "background music"
  	 	 	},
  	 	 	"enableSoundEffects": {
- 	 	 	 	"trans": "Hiệu ứng",
+ 	 	 	 	"trans": "Hiệu ứng âm thanh",
  	 	 	 	"eng": "sound effects"
  	 	 	},
  	 	 	"blockGifts": {
@@ -2672,7 +2672,7 @@
  	 	 	 	"eng": "Attachable Upgrades"
  	 	 	},
  	 	 	"cantEquip": {
- 	 	 	 	"trans": "Mức độ của bạn quá thấp đối với mặt hàng này",
+ 	 	 	 	"trans": "Cấp độ của bạn quá thấp đối với vật phẩm này",
  	 	 	 	"eng": "Your level is too low for this item"
  	 	 	},
  	 	 	"noAttachableUpgrades": {
@@ -2744,7 +2744,7 @@
  	 	 	 	"eng": "Factory Reset"
  	 	 	},
  	 	 	"quality": {
- 	 	 	 	"trans": "phẩm chất",
+ 	 	 	 	"trans": "Chất lượng",
  	 	 	 	"eng": "quality"
  	 	 	},
  	 	 	"itemUpgradeButton": {
@@ -3279,7 +3279,7 @@
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Mở tiểu sử cộng đồng cho mặt hàng này",
+ 	 	 	 	 	"trans": "Mở tiểu sử cộng đồng cho vật phẩm này",
  	 	 	 	 	"eng": "Open the community lore for this item"
  	 	 	 	}
  	 	 	},
@@ -3297,7 +3297,7 @@
  	 	"equipment": {
  	 	 	"lowPrintLevelTip": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Xếp hạng in thấp",
+ 	 	 	 	 	"trans": "Cấp độ in thấp",
  	 	 	 	 	"eng": "Low Printing Rank"
  	 	 	 	}
  	 	 	},
@@ -3968,37 +3968,37 @@
  	 	},
  	 	"rngInterferer": {
  	 	 	"description": {
- 	 	 	 	"trans": "Khả năng thả epic bổ sung từ container",
+ 	 	 	 	"trans": "Khả năng rơi epic bổ sung từ container",
  	 	 	 	"eng": "Additional epic drop chance from containers"
  	 	 	}
  	 	},
  	 	"m1Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "Động vật Nemesis",
+ 	 	 	 	"trans": "Kẻ thù động vật",
  	 	 	 	"eng": "Animals Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Tăng sát thương cho kẻ thù của băng đảng động vật",
+ 	 	 	 	"trans": "Tăng sát thương gây lên cho kẻ thù thuộc băng đảng động vật",
  	 	 	 	"eng": "Increases damage to Enemies of Animals gang"
  	 	 	}
  	 	},
  	 	"m2Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "Nemesh Voodoo",
+ 	 	 	 	"trans": "Kẻ thù tà đạo",
  	 	 	 	"eng": "Voodoo Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Tăng sát thương cho kẻ thù của Gang Voodoo",
+ 	 	 	 	"trans": "Tăng sát thương gây lên cho kẻ thù thuộc băng đảng tà đạo",
  	 	 	 	"eng": "Increases damage to Enemies of Voodoo Boys gang"
  	 	 	}
  	 	},
  	 	"m3Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "Scavengers kẻ thù",
+ 	 	 	 	"trans": "Kẻ thù ăn mày",
  	 	 	 	"eng": "Scavengers Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Tăng sát thương cho kẻ thù của băng đảng Scavenger",
+ 	 	 	 	"trans": "Tăng sát thương gây lên cho kẻ thuộc băng đảng ăn mày",
  	 	 	 	"eng": "Increases damage to Enemies of Scavengers gang"
  	 	 	}
  	 	},
@@ -4008,7 +4008,7 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Kẻ thù của những người nhặt rác liên quan đến băng đảng tăng sát thương cho bạn",
+ 	 	 	 	"trans": "Kẻ thù thuộc băng đảng ăn mày tăng sát thương gây ra bạn",
  	 	 	 	"eng": "Enemies of Scavengers gang deals increased damage to you"
  	 	 	}
  	 	},
@@ -4018,7 +4018,7 @@
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Kẻ thù của động vật Gang thỏa thuận tăng sát thương cho bạn",
+ 	 	 	 	"trans": "Kẻ thù thuộc băng đảng động vật tăng sát thương gây ra cho bạn",
  	 	 	 	"eng": "Enemies of Animals gang deals increased damage to you"
  	 	 	}
  	 	},
@@ -4028,7 +4028,7 @@
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Kẻ thù của các chàng trai Voodoo Ưu đãi băng đảng tăng sát thương cho bạn",
+ 	 	 	 	"trans": "Kẻ thù thuộc các chàng trai băng đảng tà đạo tăng sát thương gây racho bạn",
  	 	 	 	"eng": "Enemies of Voodoo Boys gang deals increased damage to you"
  	 	 	}
  	 	}
@@ -4888,7 +4888,7 @@
  	 	 	 	"likerName",
  	 	 	 	"amount"
  	 	 	],
- 	 	 	"trans": "${likerName} đã gửi cho bạn các khía cạnh ${amount} cho Bỏ qua của bạn",
+ 	 	 	"trans": "${likerName} đã gửi cho bạn sự tôn trọng ${amount} cho lần gia tốc của bạn",
  	 	 	"eng": "${likerName} has send you ${amount} respects for your skip"
  	 	}
  	},
@@ -5353,7 +5353,7 @@
  	},
  	"itemTrait": {
  	 	"stun": {
- 	 	 	"trans": "của tuyệt đẹp",
+ 	 	 	"trans": "gây choáng",
  	 	 	"eng": "of Stunning"
  	 	},
  	 	"bargain": {
@@ -5361,7 +5361,7 @@
  	 	 	"eng": "of Bargaining"
  	 	},
  	 	"power": {
- 	 	 	"trans": "của quyền lực",
+ 	 	 	"trans": "sức mạnh",
  	 	 	"eng": "of Power"
  	 	},
  	 	"health": {
@@ -5369,7 +5369,7 @@
  	 	 	"eng": "of Health"
  	 	},
  	 	"healthRegen": {
- 	 	 	"trans": "của cuộc sống",
+ 	 	 	"trans": "sự sống",
  	 	 	"eng": "of Life"
  	 	},
  	 	"maxShield": {
@@ -5525,13 +5525,13 @@
  	 	},
  	 	"gang2": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Voodoo trai",
+ 	 	 	 	"trans": "Tà đạo",
  	 	 	 	"eng": "Voodoo boys"
  	 	 	}
  	 	},
  	 	"gang3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Scavengers",
+ 	 	 	 	"trans": "Ăn mày",
  	 	 	 	"eng": "Scavengers"
  	 	 	}
  	 	}
@@ -5550,7 +5550,7 @@
  	 	 	"eng": "Elite"
  	 	},
  	 	"donation4": {
- 	 	 	"trans": "Legendary",
+ 	 	 	"trans": "Huyền thoại",
  	 	 	"eng": "Legendary"
  	 	},
  	 	"donation5": {
